# WerkzeugListeEstlcam

./: .clang-format  CMakeLists.txt  README.md  formatAll.bat  pre-commit
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ToolModel.cpp  ToolModel.h  main.cpp
estlcam/: CMakeLists.txt  EstlcamFile.cpp  EstlcamFile.h  EstlcamFile.test.cpp
scripts/: thirdparty.cmake
testdata/: test.tl
